<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wind.WindFragment">

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center"
        android:paddingTop="@dimen/wind_speed_top_padding"
        android:text="@string/wind_speed"
        android:textSize="@dimen/wind_speed_value_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/wind_speed"
        app:layout_constraintTop_toBottomOf="@+id/wind_speed">

        <TextView
            android:id="@+id/wind_speed_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:drawablePadding="@dimen/padding"
            android:paddingStart="@dimen/padding"
            android:paddingEnd="@dimen/padding"
            android:text="@string/speed"
            android:textSize="@dimen/wind_speed"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/baseline_speed_24" />

        <!--<Spinner
            android:id="@+id/dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>-->
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_avg_speed"
        android:layout_width="@dimen/card_size"
        android:layout_height="@dimen/card_size"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toStartOf="@+id/card_distance"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/avg_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avg_speed"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/avg_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/avg_seed_value"
                android:textSize="@dimen/card_value_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/avg_speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_distance"
        android:layout_width="@dimen/card_size"
        android:layout_height="@dimen/card_size"
        android:layout_marginStart="@dimen/card_margin"
        android:layout_marginEnd="@dimen/card_margin"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="@+id/card_avg_speed"
        app:layout_constraintEnd_toStartOf="@+id/card_elevation"
        app:layout_constraintStart_toEndOf="@+id/card_avg_speed"
        app:layout_constraintTop_toTopOf="@+id/card_avg_speed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/distance_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/distance_value"
                android:textSize="@dimen/card_value_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km"
                android:textSize="@dimen/text_size"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_elevation"
        android:layout_width="@dimen/card_size"
        android:layout_height="@dimen/card_size"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintBottom_toBottomOf="@+id/card_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_distance"
        app:layout_constraintTop_toTopOf="@+id/card_distance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/elevation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elevation"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/elevation_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/elevation_value"
                android:textSize="@dimen/card_value_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/elevation_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/m"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_max_speed"
        android:layout_width="@dimen/card_size"
        android:layout_height="@dimen/card_size"
        android:layout_marginTop="@dimen/card_margin"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toStartOf="@+id/card_alert_button"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_distance">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/max_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/max_speed"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/max_speed_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/max_speed_value"
                android:textSize="@dimen/card_value_text_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/speed_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_alert_button"
        android:layout_width="@dimen/card_size"
        android:layout_height="@dimen/card_size"
        android:layout_marginStart="@dimen/card_margin"
        android:backgroundTint="@color/alert"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card_max_speed"
        app:layout_constraintTop_toTopOf="@+id/card_max_speed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/alert_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/negative_margin"
                android:layout_marginBottom="-10dp"
                android:paddingTop="@dimen/padding"
                android:paddingBottom="@dimen/padding"
                android:text="@string/alert_button"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />

            <ImageView
                android:id="@+id/alert_icon"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:contentDescription="@string/alert_button"
                app:srcCompat="@drawable/alert_24" />

            <TextView
                android:id="@+id/alert_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/none"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_max_speed"
        app:layout_constraintVertical_bias="0.776">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_controls"
            android:layout_width="330dp"
            android:layout_height="50dp"
            app:cardCornerRadius="100dp"
            app:cardElevation="@dimen/card_elevation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:cardBackgroundColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/stop"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:background="@color/alert"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/round_stop_24"
                    android:contentDescription="@string/stop_button"/>

                <ImageView
                    android:id="@+id/pause"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@color/pause"
                    android:contentDescription="@string/pause_button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/stop"
                    app:srcCompat="@drawable/round_pause_24" />

                <TextView
                    android:id="@+id/timer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:lastBaselineToBottomHeight="@dimen/padding"
                    android:paddingTop="10dp"
                    android:paddingEnd="@dimen/padding"
                    android:text="@string/timer"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/timer_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
